--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <title>QR Code Generator</title>
+  <title>QR-Code Generator Online</title>
 </head>
 <body>
   <div class="QR-box">
