--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   
   <footer>
-    <p>&copy;Duino Code || Tomi Mandala Putra</p>
+    <p>&copy;Duino Code 2021</p>
   </footer>
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
